--- a/app/src/main/res/layout/fragment_photo_local.xml
+++ b/app/src/main/res/layout/fragment_photo_local.xml
@@ -40,9 +40,9 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/BasicPaddingSize"
+                android:layout_marginLeft="14dp"
                 android:background="@null"
-                android:paddingTop="@dimen/SmallPadding"
+                android:paddingTop="10dp"
                 android:src="@drawable/ytx_picker_text_indicator_selector"/>
         </LinearLayout>
 
