--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,5 +23,7 @@
     <color name="yhc_empty_view_font_color">#aaaaaa</color>
     <item name="ytx_switch_btn_on_color" type="color">@color/ytx_color</item>
     <color name="ytx_color">#212540</color>
+    <color name="blue">#ff169aff</color>
+    <color name="black">#df000000</color>
 
 </resources>
